Refactored ImageRequest implementation and enabled Java compiler preview features
Removed the definition of record types, StabilityRequest and MidjourneyRequest, directly in the sealed ImageRequest interface. Instead, these are now distinctly defined and permit to be used by ImageRequest. Also, both records now implement ImageRequest. This is aimed at providing clearer code structure and readability.

In the build.gradle.kts file, additional compiler arguments have been added to enable preview features of Java compiler. The test task has been updated with jvmArgs to enable preview and set maxParallelForks for resource efficiency.

The newly added RequestFactoryTest.java file has tests to confirm the permitted subclasses of ImageRequest.

Also in Picogen.java, refactored midjourneyRequest and stabilityRequest methods to create to their respective jobRequest in more streamlined code lines.